# deque

./: .clang-format  .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  deque.c  deque.h
tests/: CMakeLists.txt  catch.hpp  deque.cpp
